--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-i18next": "^12.3.1",
     "react-router-dom": "^6.13.0",
     "react-scripts": "5.0.1",
+    "react-simple-image-viewer": "^1.2.2",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
     "yup": "^1.2.0"
